Updates to chapter 2 and 3 to clarify when generational means used and not used

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -37,6 +37,8 @@ A proportion-based LRP is simply the proportion of CUs required to be assessed a
 
 We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between rapid multidimensional status assessments and statuses derived from abundances relative to lower benchmarks.
 
+When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the rapid multidimensional scanning tool.   
+
 
 ### Rapid Multidimensional Scanning Tool{#rapidToolMethods}
 
@@ -51,7 +53,7 @@ CW: I have been using lower benchmark for CUs and LRPs for SMUs -- Not sue if th
 CH: I suggest we avoid "below lower benchmark" except for the specific analysis (iii) above, otherwise we use "red zone".
 -->
 
-One of the methods we consider to estimate CU status for proportion-based LRP relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on an more regular basis than the time-intensive WSP assessment approach allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020], and was further ground-truthed with data for Fraser River Chum and Pink Salmon (Pestal et al. in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Essentially, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion.
+One of the methods we consider to estimate CU status for proportion-based LRP relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on an more regular basis than the time-intensive WSP assessment approach allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020], and was further ground-truthed with data for Fraser River Chum and Pink Salmon (Pestal et al. in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Essentially, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion. 
 
 <!--
 CH comment on last sentence; "with the exception of Interior Fraser River Coho which has been vetted through the State of the Salmon program and local experts (Pestal et al. in prep)"
@@ -64,15 +66,28 @@ knitr::include_graphics("figure/decision_tree.png")
 ```
 
 
-## AGGREGATE ABUNDANCE-BASED LRPS
 
-Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark, which is a proxy for above the red zone in our case study applications <!--CH: suggest change in to will have status above the red zone".-->. <!--KH: I don;t think red zone applied when only using Sgen-->. This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks<!--CH: "above the red zone" instead-->. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review).
+The rapid multi-dimensional scanning tool uses generational mean spawner abundances as a basis for comparison at each node of the decision tree, including when comparing against absolute abundance thresholds (e.g., 1500 spawners), abundance-based lower benchmarks (e.g., $S_{gen}$ or percentile), and abundance-based upper benchmarks (e.g., 0.8$S_{MSY}$ or percentile). Spawner abundances are also smoothed using generational averages prior to calculating trends in spawner abundance over time (Pestal et al., in prep).   
+
+
+## AGGREGATE ABUNDANCE-BASED LRPS{#aggAbundMethods}
+
+Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark, which is a proxy for above the red zone in our case study applications. This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review).
  
-We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs.  Logistic regression LRPs are estimated using historical data, and thus represent conditions that have been previously experienced by a SMU. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios.  
+We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs. Logistic regression LRPs are estimated using historical data, and thus represent conditions that have been previously experienced by a SMU. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios.  
+
+Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using raw annual spawner abundances. This approach is based on preliminary analyses that showed  using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable auto-correlation in the aggregate abundance time series, which is a direct violation of the logistic regression assumptions. We therefore used raw annual spawner abundances within the estimation routines, but used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in decisions about about whether an SMU has dropped below its LRP. 
+
+<!-- KH question: Does the above paragraph read ok?? Or, is it too confusing to follow? -->
+
 
 ### Logistic regression-based LRPs{#logisticMethods}
 
-Logistic regression-based LRPs (also called Logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs being above their lower benchmarks <!--CH: "on abundances"-->. <!--CH: Consider adding some text like..."While we recommend assessing CU status from the Rapid Multidimensional Scanner Tool for proportional-based LRPs, we used status on the single-metric, abundances relative to its lower benchmark within aggregate-abundance LRPs. This allowed us to apply an integrated approach to the assessment aligned with best-practices in fisheries assessments, where CU-level benchmarks, CU-level statuses, and SMU-level LRP were estimated in the same estimation procedure. In this way, statistical uncertainty was propagated throughout the analyses from benchmark estimation to LRP estimation. Furthermore, we found that status based on Rapid Multidimensional Scanner Tool usually converged with status based on abundances relative to lower benchmarks--> <!--CH comment: or I hate to suggest more work, i.e., running the  logistic regression with CU statuses based on the multidimensional tool...?. If we don't, we could recommend, "In future, we recommend running further sensitivity analyses using CU-status based on the Rapid Multidimensional Scanner Tool".-->.  For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their lower benchmark (LBM) and 0 (failure) = all CUs did not have status > LBM. A logistic regression is then fit to predict the probability that all CUs will have status > LBM as a function of aggregate spawner abundance to the SMU using the logistic regression equation:
+Logistic regression-based LRPs (also called Logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above 'poor'. While in theory, estimates of CU status used in the logistic regression could come from the rapid multidimensional scanning tool, we found little evidence of a statistical relationship between between multidimensional CU status and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. As a result, we rely on status estimated from a single lower benchmark metric (e.g., $S_{gen}$) rather than the multidimensional scanner tool to develop logistic-regression-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper.  
+
+<!-- KH question: does this above mention of the multi-dimensional approach paired with logistic regression work at this point in the method -->
+
+For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their lower benchmark (LBM) and 0 (failure) = all CUs did not have status > LBM. A logistic regression is then fit to predict the probability that all CUs will have status > LBM as a function of aggregate spawner abundance to the SMU using the logistic regression equation:
 
 \begin{equation}
   \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t}
@@ -86,7 +101,7 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit). We show the estimation of LRPs based on this fit for four possible probability thresholds: $p^*$ = 0.5, 0.66, 0.90, and 0.99. For each $p^*$ level, LRP estimates represent the aggregate abundance that is associated with that probability of all CUs having status greater than their LBM. Logistic regression models were fit using TMB (citation), with resulting LRP estimates from equation \@ref(eq:logisticLRP) calculated within the code. Uncertainty in LRP estimates were quantified based on a 95% confidence interval on the MLE estimate.  
+Annual spawner abundances at both the CU and SMU level for this analysis are on the raw scale (i.e., no generational averaging applied). An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit). We show the estimation of LRPs based on this fit for four possible probability thresholds: $p^*$ = 0.5, 0.66, 0.90, and 0.99. For each $p^*$ level, LRP estimates represent the aggregate abundance that is associated with that probability of all CUs having status greater than their LBM. Logistic regression models were fit using TMB (citation), with resulting LRP estimates from equation \@ref(eq:logisticLRP) calculated within the code. Uncertainty in LRP estimates were quantified based on a 95% confidence interval on the MLE estimate.  
 
 ```{r example-logisticFit, fig.cap="Logistic regression fit to annual Bernoulli data to predict the probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance. Each black dot represent a year in the observed time series as a Bernoulli indicator showing whether the requirement of all CUs above their LBM was met (success = 1) or not (failure = 0) as a function of aggregate spawning abundance to the SMU. The black solid line in the maximum likelihood model fit to indicator data, and the grey shaded region shows the the 95-percent confidence interval around the fit model. Coloured lines demonstrate how aggregate abundance LRPs are calculated for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all CUs > LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
@@ -182,7 +197,7 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 ### PROJECTION-BASED LRPS{#projectedMethods}
 
-The projection-based LRP approach combines all the information known for individual CUs within an SMU and then uses that information to project abundance trends into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at a given level of exploitation. This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs <!-- CW: is this still true? didn't we use the logistic regression-based with the distributional benchmark? -->, we relied on status estimated from a single metric on abundances ($S_{gen}$) rather than the multidimensional scanner tool to develop LRPs using projections. Future extensions of this approach may want to consider applying the multidimensional scanner tool within forward projections to classify CU status. 
+The projection-based LRP approach combines all the information known for individual CUs within an SMU and then uses that information to project abundance trends into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at a given level of exploitation. This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the multidimensional scanner tool to develop LRPs using projections. Future extensions of this approach may want to consider applying the multidimensional scanner tool within forward projections to classify CU status. 
 
 We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
 
