Updates to coho chapter

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -508,17 +508,19 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above 'poor' CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the rapid multidimensional scanning tool in in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on $S_{gen}$ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to $S_{gen}$ from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
+We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above 'poor' CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the rapid multidimensional scanning tool in in which CU abundance-based benchmarks are based on one of the two Ricker models (Multidim-Ricker or Multidim-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on $S_{gen}$ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to $S_{gen}$ from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
+
+We show historical results for two types of proportional LRP methods: one that uses the proportion of CUs with rapid multidimensional status > red (e.g., Prop: Multidim-Ricker)  and one that uses the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker). Holt et al. (in review) recommend that only the multidimensional approach should be used to assess status; however, we show results for the single metric $S_{gen}$ approach here to demonstrate how the rtwo approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the multidimensional status estimates.   
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportion-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as amber or green.  
 
-In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2006 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a couple methods for which status was never estimated to be below the LRP (Abund: Logistic: Sgen-Ricker; Abund: Logistic: IFCRT).  
+In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2006 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a few methods for which status was never estimated to be below the LRP (Prop: Sgen-Ricker, Abund: Logistic: Sgen-Ricker, Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (Prop: Scanner-Ricker, Abund: Logistic: Sgen-Ricker, and Abund: Proj: Sgen-Ricker; the first group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2015-2017 under the Prop: Scanner-Ricker method. Both of the aggregate abundance-based methods estimated status to remain above the LRP over this period. This result is due to the Prop method using the rapid multidimensional scanning tool to assess CU status rather than a direct comparison of CU-level abundance to $S_gen$.  The decision tree for the rapid scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.  <!--CH: perhaps we should have a version of this fig in the appendix, with Prop: SingleMetric-Ricker, in case reviewers are not happy with Multdimensional status?  Not sure...-->
+Comparison of SMU status estimates over time for all LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (first group of four methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2015-2017 under the Prop: Multidim-Ricker method. The other three Ricker methods estimated status to remain above the LRP over this period. The latter three methods are similar in that they all assess CU status based on a direct comparison of CU-level abundance to $S_gen$.  In contrast, the decision tree for the rapid multidimensional scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.  
 
-In the years 2005-2006, SMU status estimates from the 'Abund: Proj: Sgen-Ricker' method fell below the LRP, while the other two Sgen-Ricker methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual $S_{gen}$ estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Scanner-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach.  
+In the years 2005-2006, SMU status estimates from the 'Abund: Proj: Sgen-Ricker' method fell below the LRP, while the other two Sgen-Ricker methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual $S_{gen}$ estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Multidim-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach.  
 
-When the Ricker-priorCap model was used to estimate $S_{gen}$ instead of the base Ricker model, both $S_{gen}$ and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (Prop: Scanner-priorCap, Abund: Logistic: Sgen-priorCap, and Abund: Proj: Sgen-priorCap; the second group of three methods in Figure \@ref(fig:coho-statusPlot-withBars)) compared to when the base Ricker model was used.  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 13 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 8 and 7 of the 21 years for the 'Abund: Proj:Sgen-Ricker' and 'Prop: Scanner-priorCap' methods, respectively.  LRP estimates based on the proportional LRPs estimated using the rapid multidimensional scanning tool were therefore the least precautionary of the thee priorCap methods.  
+When the Ricker-priorCap model was used to estimate $S_{gen}$ instead of the base Ricker model, both $S_{gen}$ and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (see second group of four methods in Figure \@ref(fig:coho-statusPlot-withBars)) compared to when the base Ricker model was used.  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 13 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 8, 7, and 5 of the 21 years for the 'Abund: Proj:Sgen-Ricker', 'Prop: Multidim-priorCap', and 'Prop: Sgen-priorCap' methods, respectively.  LRP estimates based on the proportional LRPs estimated using the rapid multidimensional scanning tool were therefore the least precautionary of the thee priorCap methods.  
 
 Finally, SMU status remained above the LRP in all years under the Abund: Logistic: IFCRT method.  Because the aggregate abundance-based LRP estimated using this method was similar to that of the Abund: Logistic: Sgen-Ricker (17,515 and 15,395 spawners, respectively), performance for these methods was similar.  In comparison, the aggregate abundance-based LRP estimated using a logistic regression combined with the Ricker-priorCap model (Abund: Logistic: Sgen-priorCap) was higher (25,677 spawners).  
 
@@ -538,16 +540,17 @@ Discussion topic 1: What are the unique characteristics of this case study that 
 - Long history of using aggregate abundance-based recovery targets and fisheries reference points that were developed based on an underlying relationship between aggregate abundance and the distribution of abundance among sub-populations and CUs. As a result, it was well suited to looking at the application of aggregate abundance-based LRPs, as well as how they compared historically to the preferred proportional approach.
 
 
-Discussion topic 2: How well do aggregate abundance-based LRPs perform retrospectively compared to proportional LRPs using the scanner tool?
+Discussion topic 2: How well do aggregate abundance-based LRPs perform retrospectively compared to proportional LRPs?
 
 - The abundance-based methods we considered often matched the proportional methods in a historical comparison of SMU status relative to LRPs. For a given assumption about SR model structure, LRPs tended to be triggered in similar periods of times under the aggregate abundance-based and proportional options; however, there were some differences.
-- Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportional based ones.  For example, when estimates of Sgen were obtained using the base Ricker model, aggregate abundance-based LRPs were slightly less precautionary than using proprtional estimates using the scanner tool because the scanner tool used additional decision criteria based on minimum levels of absolute CU abundance. However, when estimates of Sgen were obtained using the Ricker_priorCap model, which produced higher estimates than the Ricker model, aggregate-based abundance LRPs were more precautionary than the proportional method; especially when aggregate abundance-based LRPs were estimated using the Projection-based LRP approach.  In this case, there were years in which aggregate abundance dropped below the LRP, but all CUs remained above red status using the mutli-dimensional tool.
+
+- Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. For example, when estimates of Sgen were obtained using the base Ricker model, proportion-based LRPs using rapid multidimensional status were more precautionary than the two aggregate abundance-based LRP options; especially in years 2015-2017. This result is partially a function of the different methods used to estimate CU status (rapid multidiensional scanning tool vs. single $S_{gen}$ metric) rather than the choice of proportion vs aggregate abundance approach. When aggregate abundance-based LRPs are compared to proportion-based LRPs using a single $S_{gen}$ metric, they are better aligned over this period. This result occurs because under the multidimensional approach, CUs can be above Sgen but still assessed as red status when their Sgen estimates are < 1500 spawners.
+
+- In comparison, when estimates of Sgen were obtained using the Ricker_priorCap model, which produced higher Sgen and LRP estimates than the Ricker model, both types of proportion-based LRPs were less precautionary than aggregate abundance-based LRPs. This result was especially pronounced when aggregate abundance-based LRPs were estimated using the projection-based LRP approach. LRP breaches using the multidimensional scanning tool with Ricker-priorCap estimates in earlier years (i.e., before 2015) were based CU abundance relative to $S_{gen}$, meaning that the two proportional methods were aligned. There were however additional years in which aggregate abundance LRPs were triggered but neither proportional LRP was. This pattern occurred when aggregate abundance dropped below abundance-based LRPs, but all CUs remained above red status based on CU-level abundances all being greater than $S_{gen}$. While this pattern occurred for both types of $S_{gen}$ estimates (Ricker and Ricker-priorCap), it was more common for the Ricker-priorCap model.
+
 <!--
 KH (Nov 9): Is it ok to take out the following point since we have now explored it in the coho case study?  Or, is it worth including some of the following points still in the discussion??
 - Note that we also could have looked at logistic regression-based LRPs in which historical CU status was estimated based on the multi-dimensional decision tool rather than status relative to Sgen. This would have allowed for an evaluation of the relationship between multi-dimensional status and aggregate abundance for Interior Fraser Coho, which would have be useful given the recommendation to use multidimensional status estimates to characterize CU status for proportional LRPs (Holt et al. in review). Future work to support implementation of aggregate abundance-based LRPs should consider this approach when evaluating whether there is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above red status in order to support the development of aggregate-abundance based LRPs. <!--CH: One challenge in applying statuses based on the Multidimenstional Tool to development of aggregate-abundance based LRPs is that the component metrics in the Tool includes short and long-term trends which are independent of aggregate status. This misalignment of underlying metrics will increase uncertainty in aggregate-abundance based LRPs developed from Multidimensional status, and may not be suitable-->
-<!--
-Question: is there are strong need to estimate logistic regression-based LRPs that characterize CU status based on multi-dimensional status as part of this coho case study? In our current approach, we characterize CU status based simply on abundance relative to Sgen.
--->
 
 
 Discussion topic 3: Importance of SR model choice in characterizing SMU status in all approaches.
