--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -10,13 +10,15 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 The first step is to compile CU-level data to support biological status assessments as described under the Wild Salmon Policy [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018b], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine-spatial scale data on stocks or spawning sites to the CU level. In some cases, finer spatial scales (e.g., watersheds within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status. We recommend that decision on spatial scale of conservation be part of the peer-review process for SMU assessments, and be based on biological principles of serious harm and sustainability (e.g., @bradfordReviewBiologicalPrinciples2004a). <!--CH: could make this a seperate step, or explicit sub-step if we want to further emphasize it-->
 
-For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and not included in assessments of biological status. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs. Stricter definitions of hatchery enhancement were considered (e.g., including only populations with PNI values $\geqslant$ 0.72, Integrated-Wild populations @withlerGeneticallyBasedTargets2018). In practice, applying this stricter threshold resulted in excluding almost all available data for our case study, West Coast Vancouver Island Chinook Salmon, a species that is widely enhanced. Adopting a slightly lower threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding hatchery impacts. <!--CH: comment. some of this text is repeated in the Case Study paper for WCVI CK. Remove the middle two sentences here on PNI, or keep them here, but adjust/shorten them in the Case study paper?--> 
+For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and not included in assessments of biological status. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs. Stricter definitions of hatchery enhancement were considered (e.g., including only populations with PNI values $\geqslant$ 0.72, Integrated-Wild populations @withlerGeneticallyBasedTargets2018). In practice, applying this stricter threshold resulted in excluding almost all available data for our case study, West Coast Vancouver Island Chinook Salmon, a species <!-- an SMU? --> that is widely enhanced. Adopting a slightly lower threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding hatchery impacts. <!--CH: comment. some of this text is repeated in the Case Study paper for WCVI CK. Remove the middle two sentences here on PNI, or keep them here, but adjust/shorten them in the Case study paper?
+you could remove it from here or leave in both. 
+--> 
   
 
   
 ### Assessing Data Deficiency (Step 2)
   
-Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances or associated CU-level abundance benchmarks  are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years or are of low quality representing only presence/absence, similar to criteria applied by @brown2020SummaryAbundance2020 to spawning sites of Chinook salmon in Southern BC. 
+Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances or associated CU-level abundance benchmarks are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years or are of low quality representing only presence/absence, similar to criteria applied by @brown2020SummaryAbundance2020 to spawning sites of Chinook salmon in Southern BC. 
 
 CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. For example, spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies related to trend metrics and benchmarks on spawner abundances. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies.
 
@@ -43,20 +45,34 @@ CUs containing unique biogeoclimatic or Marine Adaptive zones within an SMU may 
 
 CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity). In other SMUs, CUs with various life-history types are combined (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish) <!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
 
-CUs with very different **habitat capacities** may respond differently to similar threats. For example very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1000 fish, where as very large CUs may more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
+CUs with very different **habitat capacities** may respond differently to similar threats. For example very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1000 fish, where as very large CUs may more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.
+CW: I believe Luke also saw this effect in the Chum study case - i.e. smaller CUs were more likely to be below their benchmarks.
+-->
 
 Overall, our goal in this step is to identify if threats, environments, life-history characteristics and habitat capacities are sufficiently similar among CUs such that status and trends are likely to be consistent. In some cases natural variability alone may result in differences in status and trends even if these criteria are met. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool (PSE 2021)<!--CH: have to add ref to this URL. Add number of time-series included-->,  pairwise correlations in spawner abundances among CUs within SMUs tend to be positive for Pink, Chum, Coho, and Sockeye Salmon (Appendix Figure <!-- add Connors unpublished, or add Brendan as co-author. later preferable-->), providing some support for the use of data-rich CUs to inform those without data for those species. One caveat of this analysis is that CUs with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. In addition, the four criteria described above were not accounted for in selecting SMUs for inclusion, and so correlations may be biased low. For Chinook Salmon, correlations were more variable among CUs and sometimes negative, possibly due to the inclusion of CUs dominated by both stream-type and ocean-type fish within some SMUs. <!--CH: to check with with Brendan-->
 
 Overall, we suggest caution when representing SMU status  with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigning status of data deficient CUs based on neighboring CUs. <!-- ask Brendan which SMUs were negative to improve this guidance piece-->. We also recommend further quantitative evaluation of these criteria using empirical data disaggregated by environmental zones, life-history types and management intensity, among other variables, supported by simulation evaluation.  These criteria are not meant to be prescriptive, but to provide general guidelines for assessing possible inference for data deficient CUs. 
 
-If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, we recommend collection of CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. <!--CH: Brendan suggested interim LRPs, but I"m not sure if/when they would apply. If DD CUs don't meet the criteria above, then we should not recommend developing LRPS from remaining CUs period. If  'interim' LRPs are those from SMUs with DD CUs that do meet the above criteria, this would capture amost all of our SMUs I think.   Do we want to call these interim LRPs if collecting data for those remote CUs isn't practical/feasible and we think they probably covary with other CUs based on our criteria?  We should prioritize collection of data for CUs that fail to meet the criteria above, over those that meet them. Perhaps we can bring this up at the next TWG mtg.-->
+If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, we recommend collection of CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. <!--CH: Brendan suggested interim LRPs, but I"m not sure if/when they would apply. If DD CUs don't meet the criteria above, then we should not recommend developing LRPS from remaining CUs period. If 'interim' LRPs are those from SMUs with DD CUs that do meet the above criteria, this would capture amost all of our SMUs I think.   Do we want to call these interim LRPs if collecting data for those remote CUs isn't practical/feasible and we think they probably covary with other CUs based on our criteria?  We should prioritize collection of data for CUs that fail to meet the criteria above, over those that meet them. Perhaps we can bring this up at the next TWG mtg.-->
 <!--CH: on second thought, given the results from the IFR analysis removing CUs, showing that the CU status is usually biased positive (overoptimistic) when only a subset of CUs are used, maybe it is appropriate for us to call these interim LRPs?-->
+
+<!--CW: From the PA Policy:
+"In resource management, the PA is, in general, about being cautious when scientific information is uncertain, unreliable or inadequate and not using the absence of adequate scientific information as a reason to postpone or fail to take action to avoid serious harm to the resource."
+But also:
+"In data deficient cases, priority should go to monitoring the stock and establishing data time series to support the identification of an LRP. When developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available."
+
+The PA policy also suggests that when a stock is DD, a meta analysis approach should be used to set LRPs (see annex 1b). 
+
+Given the statements above, I think Brendan's suggestion of Interim LRP is appropriate. However, Maybe we could suggest that the interim LRP should be accompanied by a detailed plan of how the data deficiencies could be addressed? Or if they could be addressed at all.
+This may be a bit out there but: maybe we could suggest the establishment of a data collection plan that would be analogous to the recovery plan but to address data deficiency. -This plan would include a list of data that could be collected (e.g. monitoring of spawning grounds, establishment of genetic markers, catch sampling, ageing, etc.) and potential costs associated with everything? -- Also this plan could clearly indicate if spawning grounds are too remote, inaccessible, or too costly to monitor. -- I think that having that kind of information documented would go a long way in establishing priorities.    
+-->
 
 ### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
 
-The identification of serious harm is a science-based activity, independent of management processes. Given the goal of the Wild Salmon Policy to protect the biodiversity of Pacific salmon in part through the maintaining CUs above lower biological benchmarks, we have identified 100$\%$ of CUs as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs deemed extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. This step does not include cost-benefit trade-offs associated with choosing which CUs to prioritize if only a portion can be conserved under growing threats, including climate change. Those analyses would require collaboration with various sectors involved in management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated under limited resources in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019).  Considerations on rebuilding potential are outside scope of identifying LRPs.
+The identification of serious harm is a science-based activity, independent of management processes. Given the goal of the Wild Salmon Policy to protect the biodiversity of Pacific salmon in part through the maintaining CUs above lower biological benchmarks, we have identified 100$\%$ of CUs as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs deemed extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. This step does not include cost-benefit trade-offs associated with choosing which CUs to prioritize if only a portion can be conserved under growing threats, including climate change. Those analyses would require collaboration with various sectors involved in management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated under limited resources in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019).  Considerations on rebuilding potential <!--should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but --> are outside scope of identifying LRPs.
 
-Furthermore, unlike other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention possibly using non-fisheries related levers (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU as serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
+Furthermore, unlike other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention possibly using non-fisheries related levers (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU as serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales
+CW:Should we recommend (hint) that RP will likely need to be designed to include action at various -->
 
 
 Once LRPs are identified, SMU-level objectives and management procedures can then be evaluated in cost-benefit analyses to identify those approaches that best meet objectives, including the prioritization of CU-specific interventions. Furthermore, objectives and management actions can be adapted to a range of spatial scales from CU to regional or multi-SMU scales and then evaluated in a hierarchical context. The proposed LRP presented here of 100$\%$ of component CUs above the red status within an SMU is a first step in that process.
@@ -66,9 +82,12 @@ Once LRPs are identified, SMU-level objectives and management procedures can the
 
 The status of individual CUs is assessed and the proportion of CUs with status above red is then compared to the LRP of 100% identified from step 4. 
 
-Where available, we recommend applying CU assessments from recent WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@dfoCanadaPolicyConservation2005a; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than an generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.-->
+Where available, we recommend applying CU assessments from recent WSP Integrated Status Assessments, in which multiple metrics, such as abundances and short- and long-term trends, are integrated to assign CU status within an expert-driven process [@dfoCanadaPolicyConservation2005a; @grant2017FraserSockeye2020]. Here we define recent as within the most recent generation as a general guideline, though major perturbations such as landslide events may make even recent assessments unrepresentative of current conditions if the impact of those events are not accounted for. <!--CH remove: Over time-periods longer than an generation, the extent to which the assessment is still representative depends on the dynamics of the specific system.
+CW: agree.-->
 
-Because WSP Integrated status assessments are time-intensive processes and are not available for most CUs, we demonstrate the application of a Rapid Multidimensional Scanning Tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in a companion working paper (Holt et al. in prep)<!--CH: I adapted this sentence and the next sentence from the CaseStudy WP, Ch2. Also, should I refer to Ch 2 of this paper instead/in addition; Ch2 of this WP will briefly describe the approaches as well?-->
+Because WSP Integrated status assessments are time-intensive processes and are not available for most CUs, we demonstrate the application of a Rapid Multidimensional Scanning Tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP multidimensional assessment framework (Pestal et al. in prep). More details on this approach are provided in a companion working paper (Holt et al. in prep)<!--CH: I adapted this sentence and the next sentence from the CaseStudy WP, Ch2. Also, should I refer to Ch 2 of this paper instead/in addition; Ch2 of this WP will briefly describe the approaches as well?
+CW: I think it would be wiser to give emphasis to the pestal et al paper, as it will be the main reference for the method. I think that stating that "we demonstrate the application (...)" is sufficient. 
+-->
                                                                                                                   While the Rapid Multidimensional Scanning Tool captures the multiple dimensions that are used to inform biological status under the WSP, we compared resulting status to a simplified approach derived from a single metric, spawner abundances relative to its lower benchmark. In this way, we demonstrated how in most cases the Rapid Multidimensional Scanning Tool reduces to this single metric. The simplified single-metric assessment is one component of the Multidimensional Scanning Tool, a tool which captures additional dimensions of status providing a more comprehensive assessment.
                                                                                                                                                                            
 ### Peer-review Assessments of Status Relative to Proportion-based LRP (Step 6)
